SERVER-63241 Lookup round should fulfill atleast a promise